--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="fade-in" style="background-image: url(images/git-logo_7.webp);"></div>
         <div class="fade-in special galeria_git" style="background-image: url(images/github_11.png);"></div>
         <div class="fade-in" style="background-image: url(images/node_9.png);"></div>
-        <div class="fade-in" style="background-image: url(images/mongo_7.png);"></div>
+        <div class="fade-in" style="background-image: url(images/angular5.png);"></div>
       </div>
     </section>
 
