--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="face face1">
           <div class="content">
             <i class="fas fa-chart-line"></i>
-            <h3>SEO</h3>
+            <h3>QA Tester</h3>
           </div>
           <button class="more-btn">
             <i class="fas fa-chevron-down"></i>
@@ -113,9 +113,7 @@
         </div>
         <div class="face face2">
           <div class="content">
-            <p> Se poseen conocimientos básicos en SEO (Search Engine Optimization), lo cual permite optimizar sitios
-              web para obtener una mejor visibilidad en los motores de búsqueda. Se entiende la importancia de palabras
-              clave, metaetiquetas y enlaces relevantes para mejorar el posicionamiento orgánico.</p>
+            <p> Experiencia en QA Tester, especializado en SeleniumBase. Realizo revisiones exhaustivas de la calidad y funcionamiento de sitios web, garantizando su rendimiento óptimo. Mi enfoque en la automatización de pruebas asegura la detección y corrección de errores, mejorando la estabilidad y usabilidad del producto final.</p>
 
           </div>
         </div>
@@ -211,7 +209,7 @@
         <div class="fade-in" style="background-image: url(images/HTML.png);"></div>
         <div class="fade-in" style="background-image: url(images/CSS.png);"></div>
         <div class="fade-in special" style="background-image: url(images/javascript.png);"></div>
-        <div class="fade-in special" style="background-image: url(images/react-js.png);"></div>
+        <div class="fade-in special" style="background-image: url(images/python3.png);"></div>
         <div class="fade-in" style="background-image: url(images/git-logo_7.webp);"></div>
         <div class="fade-in special galeria_git" style="background-image: url(images/github_11.png);"></div>
         <div class="fade-in" style="background-image: url(images/node_9.png);"></div>
@@ -271,12 +269,11 @@
     
       <div class="card-wrapper">
         <div class="card-top">
-          <img class="image" src="images/Metodo-SRD_Logo_VVertical.jpg" data-target="2">
+          <img class="image" src="images/ecapturedtech_logo.jpg" data-target="2">
         </div>
         <div class="card-bottom">
-          <span class="top-text">Gestión de Proyectos</span><br>
-          <span class="bottom-text">Experiencia laboral en gestión de proyectos enfocada en redes sociales, marketing y búsqueda de clientes, 
-            con el objetivo de optimizar la experiencia del usuario en plataformas digitales para clientes multinacionales.
+          <span class="top-text">EcaptureDtech</span><br>
+          <span class="bottom-text">Experiencia en QA Tester con SeleniumBase y Python. Realizo revisiones de calidad y funcionamiento web, asegurando alto rendimiento. Enfoque en automatización de pruebas para detectar y corregir errores, mejorando la estabilidad y usabilidad del producto.
           </span>
           <br>
         </div>
