--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <div class="left_content">
         <h1>Ignacio Sahelices <br> <span class="auto-type"></span></h1>
-        <p>Desarrollador front-end dedicado a la creación de sitios web atractivos, <br> funcionales y de alto
+        <p>QA Tester y Desarrollador Front-end dedicado a la creación y revisión de sitios web atractivos, <br> funcionales y de alto
           rendimiento.</p>
 
         <div class="contact_button">
