--- a/index.html
+++ b/index.html
@@ -281,9 +281,8 @@
       <div class="modal" id="modal2">
         <span class="close">&times;</span>
         <div class="modal-content">
-          <h3 class="modal-title">Gestión de proyectos</h3>
-          <p>Experiencia laboral en gestión de proyectos enfocada en redes sociales, marketing y búsqueda de clientes, 
-            con el objetivo de optimizar la experiencia del usuario en plataformas digitales para clientes multinacionales</p>
+          <h3 class="modal-title">EcaptureDtech</h3>
+          <p>Experiencia en QA Tester con SeleniumBase y Python. Realizo revisiones de calidad y funcionamiento web, asegurando alto rendimiento. Enfoque en automatización de pruebas para detectar y corregir errores, mejorando la estabilidad y usabilidad del producto.</p>
         </div>
       </div>
     </section>
